'Carousel overlapping header' fixed

--- a/styles/general.css
+++ b/styles/general.css
@@ -18,6 +18,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background: black;
+  z-index: 1;
 }
 .header a {
   margin-left: 1rem;
